- 자격 증명 정보 수정 (보안 이슈)